--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:layout_weight="1"
             android:layout_margin="10dp"
             android:text="显示路径"
+            android:textColor="@color/white"
             android:background="@drawable/btn_bg"/>
     </LinearLayout>
 
