--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -15,7 +15,9 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:tag="skin:bg_color:background"
-            app:layout_scrollFlags="scroll|enterAlways">
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
@@ -26,6 +28,7 @@
             app:tabMode="fixed"
             app:tabGravity="fill"
             app:tabTextColor="@color/white"
+            app:tabSelectedTextColor="#FF4081"
             app:layout_scrollFlags="scroll|enterAlways">
         </android.support.design.widget.TabLayout>
 
@@ -72,7 +75,8 @@
             android:id="@+id/chart_view"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            android:layout_gravity="center"/>
     </LinearLayout>
 
 
