--- a/app/src/main/res/layout/order_info_item.xml
+++ b/app/src/main/res/layout/order_info_item.xml
@@ -1,51 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="2dp"
-              android:layout_marginBottom="2dp"
-    android:orientation="horizontal">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="vertical"
+android:background="@color/white"
+android:elevation="3dp">
 
+<View
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_margin="5dp"
+    android:background="@color/divider"/>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
+        android:layout_gravity="center_vertical"
+        android:id="@+id/longitude_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
         android:gravity="center"
-        android:layout_marginLeft="8dp"
-        android:textSize="16sp"
-        android:text="饮食："
-        android:textColor="#3F88FC"/>
-
-    <TextView
-        android:id="@+id/order_info_food_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
+        android:text="号码"/>
+    <View
         android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="8dp"
-        android:textSize="16sp"/>
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:layout_gravity="center_vertical"
-        android:gravity="center"
-        android:layout_marginLeft="8dp"
-        android:textSize="16sp"
-        android:text="电话："
-        android:textColor="#3F88FC"/>
-
+        android:layout_width="1dp"
+        android:layout_height="15dp"
+        android:layout_margin="5dp"
+        android:background="@color/divider"/>
     <TextView
         android:id="@+id/order_info_phone_tv"
+        android:layout_gravity="center_vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="8dp"
-        android:textSize="16sp"/>
-
+        android:layout_weight="3"
+        android:background="@null"
+        android:layout_margin="5dp"/>
+</LinearLayout>
 </LinearLayout>
