--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     
     <color name="path_blue">#2196F3</color>
     <color name="path_pink">#FF4081</color>
     <color name="path_green">#8BC34A</color>
+
+    <color name="divider">#BDBDBD</color>
+
+    <color name="lightPrimaryColor">#BBDEFB</color>
+    <color name="pink">#E91E63</color>
+    <color name="purple">#9C27B0</color>
+    <color name="orange">#FF5722</color>
+    <color name="yellow">#FFC107</color>
+    <color name="green">#4CAF50</color>
+    
 </resources>
